--- a/applications/ecommerce/index.html
+++ b/applications/ecommerce/index.html
@@ -8,6 +8,8 @@
     <link href="styles/layout.css" rel="stylesheet" />
     <link href="styles/header.css" rel="stylesheet" />
     <link href="styles/categories.css" rel="stylesheet" />
+    <link href="styles/items.css" rel="stylesheet" />
+    <link href="styles/footer.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -19,11 +21,21 @@
 
         <section class="categories">
             <ul>
-                <li>Watersports</li>
-                <li>Soccer</li>
-                <li>Basketball</li>
-                <li>Hockey</li>
-                <li>Boardgames</li>
+                <li>
+                    <button><a href="pages/watersports.html">Watersports</a></button>
+                  </li>
+                  <li>
+                    <button><a href="pages/soccer.html">Soccer</a></button>
+                  </li>
+                  <li>
+                    <button><a href="pages/basketball.html">Basketball</a></button>
+                  </li>
+                  <li>
+                    <button><a href="pages/hockey.html">Hockey</a></button>
+                  </li>
+                  <li>
+                    <button><a href="pages/boardgames.html">Boardgames</a></button>
+                  </li>
             </ul>
         </section>
 
@@ -43,6 +55,30 @@
                     <p>Have some extreme fun being pulled in this raft!</p>
                     <button>Add to cart</button>
                 </li>
+                <li>
+                    <img src="imgs/woodenSet.png" alt="" />
+                    <h3>Chess board and pieces</h3>
+                    <div>$499.00</div>
+                    <p>Hand-crafted from the finest Mahoganey wood</p>
+                    <button>Add To Cart</button>
+                  </li>
+                  <li>
+                    <img src="imgs/shirtCanada.png" alt="" />
+                    <h3>Team Canada soccer jersey</h3>
+                    <div>$591.00</div>
+                    <p>
+                      Display your national pride with this authentic Team Canada soccer
+                      jersey!
+                    </p>
+                    <button>Add To Cart</button>
+                  </li>
+                  <li>
+                    <img src="imgs/sunglass.png" alt="" />
+                    <h3>Goggles</h3>
+                    <div>$396.00</div>
+                    <p>Top-of-the-line goggles for the most extreme of watersports!</p>
+                    <button>Add To Cart</button>
+                  </li>        
             </ul>
         </section>
 
