Added signup page

--- a/applications/ecommerce/index.html
+++ b/applications/ecommerce/index.html
@@ -4,19 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Store</title>
-    <link href="styles/global.css" rel="stylesheet" />
-    <link href="styles/layout.css" rel="stylesheet" />
-    <link href="styles/header.css" rel="stylesheet" />
-    <link href="styles/categories.css" rel="stylesheet" />
-    <link href="styles/items.css" rel="stylesheet" />
-    <link href="styles/footer.css" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Sansita:wght@800&display=swap" rel="stylesheet">
+    
+    <link href="styles/app.css" rel="stylesheet" />
 
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Sports Store</h1>
-            <button>Sign up</button>
+            <button><a href="signup.html">Sign up</a></button>
         </header>
 
         <section class="categories">
